--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <h3><p><a href="https://www.threads.net/@ilovemywifepum">https://www.threads.net/@ilovemywifepum</a></p></h3>
         <h3><p><a href="https://bitcointalk.org/index.php?topic=5526230.0">https://bitcointalk.org/index.php?topic=5526230.0</a></p></h3>
         <h3><p><a href="https://linktr.ee/ilovemywifepump">https://linktr.ee/ilovemywifepump</a></p></h3>
-         <h3><p>❤️❤️❤️</p></h3>
+        <h3><p><a href="https://dexscreener.com/solana/gzlhxfvvpfkjbyggsnxwwywyjnkttdhasj81yntvmm8">https://dexscreener.com/solana/gzlhxfvvpfkjbyggsnxwwywyjnkttdhasj81yntvmm8</a></p></h3>
+        <h3><p>❤️❤️❤️</p></h3>
     </div>
 </body>
 </html>
