--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <h3><p><a href="https://bitcointalk.org/index.php?topic=5526230.0">https://bitcointalk.org/index.php?topic=5526230.0</a></p></h3>
         <h3><p><a href="https://linktr.ee/ilovemywifepump">https://linktr.ee/ilovemywifepump</a></p></h3>
         <h3><p><a href="https://dexscreener.com/solana/5QPDppcGA5LYk53Exxf4eQeCFREUbHJf6jucL9gSjvtY">https://dexscreener.com/solana/5QPDppcGA5LYk53Exxf4eQeCFREUbHJf6jucL9gSjvtY</a></p></h3>
+        <h3><p><a href="https://www.dextools.io/app/en/solana/pair-explorer/5QPDppcGA5LYk53Exxf4eQeCFREUbHJf6jucL9gSjvtY?t=1737321852491">https://www.dextools.io/app/en/solana/pair-explorer/5QPDppcGA5LYk53Exxf4eQeCFREUbHJf6jucL9gSjvtY?t=1737321852491</a></p></h3>
         <h3><p>❤️❤️❤️</p></h3>
     </div>
 </body>
